# RustyPage

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE.yml  SUPPORT_QUESTION.yml  config.yml
.github/workflows/: github-pages.yml  rust-testing.yml
docs/: CONTRIBUTING.md  SUPPORT.md  themes.md
docs/config/: README.md
docs/config/examples/: bookmarks-only.toml  clock-only.toml  default.toml  full.toml  search-only.toml
docs/styles/: base.css
docs/styles/themes/: README.md
docs/styles/themes/catppuccin/: frappe.css  latte.css  macchiato.css  mocha.css
docs/themes/: README.md
docs/themes/css/: base.css  catppuccin.css
docs/themes/css/catppuccin/: latte.css
examples/: config.toml
src/: cli.rs  config.rs  main.rs  templates.rs
src/themes/: catppuccin.rs  default.rs  dracula.rs  gruvbox.rs  mod.rs
templates/: home.html
tests/: cmds.rs
tests/data/: bookmarks-only.html  clock-only.html  default.html  full.html  search-only.html
