[package]
name = "RustyPage"
version = "1.0.6"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["ArkhamCookie <cargo@mail.arkhamcookie.com>"]
description = "RustyPage is a simple startpage configurable with a simple TOML file."
homepage = "https://arkhamcookie.github.io/RustyPage/"
repository = "https://github.com/ArkhamCookie/RustyPage"
readme = "README.md"
keywords = ["homepage", "startpage", "site"]
exclude = [".github/"]

[dependencies]
askama = "0.14.0"
clap = { version = "4.5.53", features = ["cargo", "derive"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"

[[bin]]
name = "rustypage"
path = "src/main.rs"
