[package]
name = "RustyPage"
version = "1.0.15"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["ArkhamCookie <cargo@mail.arkhamcookie.com>"]
description = "RustyPage is a simple startpage configurable with a simple TOML file."
homepage = "https://arkhamcookie.github.io/RustyPage/"
repository = "https://github.com/ArkhamCookie/RustyPage"
readme = "README.md"
keywords = ["homepage", "startpage", "site"]
exclude = [".github/"]

[dependencies]
askama = "0.15.1"
clap = { version = "4.5.54", features = ["cargo", "derive"] }
directories = "6.0.0"
minify-html = { version = "0.18.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

[dev-dependencies]
assert_cmd = "2.1.2"
diff = "0.1.13"

[[bin]]
name = "rustypage"
path = "src/main.rs"

[features]
default = []
minify = ["dep:minify-html"]

